<resources>
    <string name="app_name">Telegram_app_clone</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_new_group">New Group</string>
    <string name="nav_secret">New Secret Chat</string>
    <string name="nav_channel">New Channel</string>
    <string name="nav_contacts">Contacts</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_saved">Saved Messages</string>

    <string name="nav_calls">Calls</string>
    <string name="nav_invite">Invite Friends</string>
    <string name="nav_faq">Telegram FAQ</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Telegram</item>

    </string-array>

    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>


